--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,5 +1,8 @@
 {
   "apps": [
-
+      "serverURL": "http://thepolygonparse.azurewebsites.net/parse",
+      "appId": "tpa.thePolygon.app",
+      "masterKey": "Kishi1234",
+      "appName": "ThePolygonApp"
   ]
 }
