--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -1,7 +1,7 @@
 {
   "apps": [
     {
-      "serverURL": "http://thepolygonparseserver.azurewebsites.net/parse",
+      "serverURL": "http://thepolygonserver.azurewebsites.net/parse",
       "appId": "tpa.thePolygon.app",
       "masterKey": "Kishi1234",
       "appName": "ThePolygonApp"
