--- a/Parse-Dashboard/parse-dashboard-config.json
+++ b/Parse-Dashboard/parse-dashboard-config.json
@@ -5,6 +5,12 @@
       "appId": "tpa.thePolygon.app",
       "masterKey": "Kishi1234",
       "appName": "ThePolygonApp"
+    },
+    {
+      "serverURL": "http://thepolygonparseserver.azurewebsites.net/parse",
+      "appId": "tpa.thePolygon.app",
+      "masterKey": "Kishi1234",
+      "appName": "ThePolygonApp_Push"
     }
   ],
   "users": [
